--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <!-- Added anchor link here -->
                 <li><a href="Tabelle.html">Montessori Plus Plan</a></li>
                 <!-- Added anchor link to the login page -->
-                <li><a href="login/login.html">Login</a></li>
+                <li><a href="Login/Login.html">Login</a></li>
                 <!-- Added anchor link to the Rooms.html page -->
                 <li><a href="Rooms.html">Raum check</a></li>
             </ul>
