--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li><a href="#">Kontakt</a></li>
                 <!-- Added anchor link here -->
                 <li><a href="Tabelle.html">Montessori Plus Plan</a></li>
-                <!-- Added anchor link to the Login page -->
-                <li><a href="Login/login.html">Login</a></li>
+                <!-- Added anchor link to the login page -->
+                <li><a href="login/login.html">Login</a></li>
                 <!-- Added anchor link to the Rooms.html page -->
                 <li><a href="Rooms.html">Raum check</a></li>
             </ul>
